lift to greenfoot 3.6.0 (Java 11)